--- a/frontend/src/components/ContactUs/ContactUs.css
+++ b/frontend/src/components/ContactUs/ContactUs.css
@@ -1,26 +1,29 @@
-.follow_us_container{
-    display:flex;
+.follow_us_container {
+    display: flex;
     flex-direction: row;
     align-self: center;
 }
 
-#contact_us_container{
+#contact_us_container {
     margin-top: 30px;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    background-color: #D8D8D8;
+    background-color: #d8d8d8;
 }
 
-#contact_info{
+#contact_info {
     align-self: center;
     font-weight: bold;
 }
 
-
-@media screen and (max-width: 600px){
-
-    #contact_us_container{
+@media screen and (max-width: 600px) {
+    #contact_us_container {
         margin-top: 40px;
     }
+}
 
+@media screen and (min-width: 1400px) {
+    #contact_us_container {
+        min-height: 1100px;
+    }
 }
